--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
             <div class="box">
                 <img src="imgs/cat-06.jpg" alt="">
                 <div class="content">
-                  <h3>Test Title</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolorum tenetur enim!</p>
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolorum tenetur enim!</p>
                 </div>
                 <div class="info">
                     <a href="#">Read More</a>
@@ -224,6 +224,40 @@
         </div>
     </div>
     <!-- end gallery -->
+    <!-- start Features -->
+    <div class="features" id="features">
+        <h2 class="main-title">Features</h2>
+        <div class="container">
+            <div class="box quality">
+                <div class="img-holder">
+                    <img src="imgs/features-01.jpg" alt="">
+                </div>
+                <h2>Quality</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae consequatur itaque doloribus
+                    eveniet corrupti. Ea.</p>
+                <a href="#">More</a>
+            </div>
+            <div class="box time">
+                <div class="img-holder">
+                    <img src="imgs/features-02.jpg" alt="">
+                </div>
+                <h2>Time</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, placeat incidunt cum reiciendis
+                    obcaecati voluptas?</p>
+                <a href="#">More</a>
+            </div>
+            <div class="box passion">
+                <div class="img-holder">
+                    <img src="imgs/features-03.jpg" alt="">
+                </div>
+                <h2>passion</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta libero, consectetur harum fuga culpa
+                    sapiente?</p>
+                <a href="#">More</a>
+            </div>
+        </div>
+    </div>
+    <!-- end Features -->
 </body>
 
 </html>
